--- a/25-2-21.html
+++ b/25-2-21.html
@@ -29,7 +29,7 @@
             <td>5</td> <td>Naina</td> <td>A++</td>
         </tr>
     </table>
-    <button class="button button1">Click here for source code!</button>
+    <a href="https://github.com/TAGISWILD/School-Assignments/blob/main/25-2-21.html"><button class="button button1">Click here for source code!</button></a>
     <a href="https://tagiswild.github.io"><button class="button button2">Atharva Chauhan</button></a>
 </body>
 </html>
