--- a/OwnCreation/PlaySound/Play_Sound.html
+++ b/OwnCreation/PlaySound/Play_Sound.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <body bgcolor="Pink">
-    <center><h1>Doge Dancing On Bombay Dreams</h1></center>
+    <center><h1>Mr. Cheems Doge Dancing On <a href="https://www.youtube.com/watch?v=lYxjFOvFzb4">Bombay Dreams</a></h1></center>
     <audio src="Sound.mp3" autoplay=true loop=true></audio>
+    <center>
     <img src="dogeGIF.gif">
     <img src="dogeGIF.gif">
     <img src="dogeGIF.gif">
@@ -22,5 +23,6 @@
     <img src="dogeGIF.gif">
     <img src="dogeGIF.gif">
     <img src="dogeGIF.gif">
+    </center>
 </body>
 </html>
