Added New Assignment

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- This Was Made By Atharva Chauhan On 25-2-21 !-->
+<!--This Was Made By Atharva Chauhan On 19-3-21--!-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Table Assignment</title>
+    <title>Table With Borders</title>
 </head>
-<body>
-    <body bgcolor="cyan"></body>
-    <table>
+<body topmargin="50" bottommargin="50" bgcolor="yellow">
+    <h1>Table With Borders</h1>
+    <table border="4" Bordercolor=blue>
         <tr>
             <th>S.No</th> <th>Name</th> <th>Grade</th>
         </tr>
